--- a/reports/wildlings-NiN.Rmd
+++ b/reports/wildlings-NiN.Rmd
@@ -14,19 +14,27 @@ library(units)
 source(here("R","locality-functions.R"))
 ```
 
-```{r types to groups, eval=FALSE}
+```{r recode types, eval=FALSE}
 ninfiles <- list.files(here("data","qc"), pattern = "nin.shp", recursive = TRUE)
-codes <- character()
 for (i in ninfiles) {
   shp <- st_read(here("data","qc",i), quiet = TRUE)
   code <- gsub("(.*?)(-.*)", "\\1", as.character(shp[[1]])) %>% 
     make.names()
-  codes <- append(codes, code)
   shp <- mutate(shp, code = code)
   st_write(shp, here("data","qc",i), delete_layer = TRUE, quiet = TRUE)
 }
+```
 
-codes <- unique(codes)
+```{r grouping of types}
+ninfiles <- list.files(here("data","qc"), pattern = "nin.shp", recursive = TRUE)
+codes <- map(ninfiles, ~ st_read(here("data","qc",.), quiet = TRUE) %>% 
+               pull(code) %>% 
+               as.character())
+map(codes, ~ any(is.na(.))) %>% 
+  unlist() %>% 
+  which()
+codes <- flatten_chr(codes) %>% 
+  unique()
 codes[order(substring(codes, 1, 1), as.numeric(substring(codes, 2)))]
 
 grouping <- tribble(
@@ -36,11 +44,13 @@ grouping <- tribble(
   "T3", "T3", 0.5,
   "T4", "T4", 10,
   "T6", "T6", 0,
+  "T12", "T12", 0.5,
   "T13", "T13", 0,
   "T16", "T16", 0.5,
   "T17", "T17", 0,
   "T18", "T18", 0,
   "T21", "T21", 0,
+  "T24", "T24", 0.5,
   "T27", "T27", 0,
   "T29", "T29", 0,
   "T30", "T30", 10,
@@ -48,7 +58,8 @@ grouping <- tribble(
   "T32", "T32", 0.5,
   "T33", "T33", 0.5,
   "T34", "T34", 0.5,
-  "T35", "disturbed", 0, 
+  "T35", "disturbed", 0,
+  "T36", "disturbed", 0.5,
   "T37", "disturbed", 0,
   "T38", "plantation forest", 10,
   "T39", "disturbed", 0,
@@ -70,18 +81,9 @@ grouping <- tribble(
   "V11", "disturbed", 0,
   "V12", "disturbed", 0,
   "V13", "disturbed", 0) 
-
-for (i in ninfiles) {
-  shp <- st_read(here("data","qc",i), quiet = TRUE) %>% 
-    mutate(code = as.character(code)) %>% 
-    mutate(group = NULL)
-  shp <- left_join(shp, grouping, by = "code")
-  st_write(shp, here("data","qc",i), delete_layer = TRUE, quiet = TRUE)
-}
 ```
 
 ```{r check topology, include=FALSE, eval=FALSE}
-ninfiles <- list.files(here("data","qc"), pattern = "nin.shp", recursive = TRUE)
 for (i in ninfiles) {
   shp <- st_read(here("data","qc",i), quiet = TRUE)
   if (!all(st_is_valid(shp))) {
@@ -95,15 +97,18 @@ species <- list.files(here("data","qc"))
 
 perNiN <- list()
 
-for (j in species) {
+for (j in species) { # j <- species[1]
   message(j)
   localities <- list.files(here("data","qc",j))
 
-  for (i in localities) {
+  for (i in localities) { # i <- localities[1]
     nin <- st_read(here("data","qc",j,i,"nin.shp"), quiet = TRUE) %>% 
-      as_tibble %>% st_as_sf()
+      as_tibble %>% st_as_sf() %>% 
+      mutate(code = as.character(code), group = NULL) %>% 
+      left_join(grouping, by = "code")
     wildlings <- st_read(here("data","qc",j,i,"wildlings.shp"), quiet = TRUE)
-    wildling.density <- calc_density_by_field(poly = nin, pts = wildlings, field = group)
+    wildling.density <- calc_density_by_field(poly = nin, pts = wildlings, 
+                                              field = group)
     perNiN[[j]][[i]] <- wildling.density
   }
 }
@@ -129,14 +134,16 @@ species <- list.files(here("data","qc"))
 
 percell <- list()
 
-for (j in species) {
+for (j in species) { # j <- species[1]
   message(j)
   localities <- list.files(here("data","qc",j))
   
-  for (i in localities) {
+  for (i in localities) { # i <- localities[1]
     message(i)
     nin <- st_read(here("data","qc",j,i,"nin.shp"), quiet = TRUE) %>% 
-      as_tibble %>% st_as_sf()
+      as_tibble %>% st_as_sf() %>% 
+      mutate(code = as.character(code), group = NULL) %>% 
+      left_join(grouping, by = "code")
     grd <- make_grid(nin, gridres = 10)
     
     grd <- add_dummies_to_grid(grd, nin, field = group) %>% 
