--- a/reports/locality-WALD.Rmd
+++ b/reports/locality-WALD.Rmd
@@ -62,11 +62,13 @@ grouping <- tribble(
   "T3", "T3", 0.5,
   "T4", "T4", 10,
   "T6", "T6", 0,
+  "T12", "T12", 0.5,
   "T13", "T13", 0,
   "T16", "T16", 0.5,
   "T17", "T17", 0,
   "T18", "T18", 0,
   "T21", "T21", 0,
+  "T24", "T24", 0.5,
   "T27", "T27", 0,
   "T29", "T29", 0,
   "T30", "T30", 10,
@@ -74,7 +76,8 @@ grouping <- tribble(
   "T32", "T32", 0.5,
   "T33", "T33", 0.5,
   "T34", "T34", 0.5,
-  "T35", "disturbed", 0, 
+  "T35", "disturbed", 0,
+  "T36", "disturbed", 0.5,
   "T37", "disturbed", 0,
   "T38", "plantation forest", 10,
   "T39", "disturbed", 0,
@@ -119,6 +122,8 @@ for (i in species) { # i <- species[1]
     message(j)
     nin <- st_read(here("data","qc",i,j,"nin.shp"), quiet = TRUE) %>% 
       as_tibble %>% st_as_sf() %>% 
+      mutate(code = as.character(code), group = NULL) %>% 
+      left_join(grouping, by = "code") %>% 
       filter(group != "plantation forest")
     grd <- make_grid(nin, gridres = 10)
     grd <- add_dummies_to_grid(grd, nin, field = group) %>% 
@@ -146,11 +151,14 @@ for (i in species) { # i <- species[1]
       select(-normalizer)
     grd.pts <- st_centroid(st_geometry(grd))
 
-    source <- st_read(here("data","qc",i,j,"source_polygon.shp"), quiet = TRUE)
-    nsources <- st_area(source) %>% sum() %>% `/`(100) %>% drop_units() %>% round()
+    source <- st_read(here("data","qc",i,j,"source_polygon.shp"), quiet = TRUE) 
+    source <- mutate(source, nsources = st_area(source) %>% 
+                       `/`(100) %>% # 1 source per 100m2 (gridres 10x10m)
+                       drop_units() %>% 
+                       round())
+    source.nonz <- filter(source, nsources > 0)
     set.seed(42)
-    sources <- st_sample(source, nsources, type = "hexagonal") %>% st_sf()
-    # sources <- st_read(here("data","qc",i,j,"sources.shp"), quiet = TRUE)
+    sources <- st_sample(source.nonz, source.nonz$nsources, type = "hexagonal") %>% st_sf()
     height <- loc.tab %>% 
       mutate(locality = tolower(locality)) %>% 
       filter(species == i, locality == j) %>% 
@@ -242,10 +250,12 @@ for (i in species) { # i <- species[1]
 
 ```
 
-```{r}
-slow <- raster::raster(here("data","qc","Larix","anisdal","wald100daa.tif"))
+```{r, eval=FALSE}
+slow <- raster::raster(here("data","qc","Larix","anisdal","wald10daa.tif"))
 fast <- raster::raster(here("data","qc","Larix","anisdal","wald.tif"))
 st <- raster::stack(slow, fast)
-raster::as.data.frame(st, na.rm=TRUE) %>% cor()
+df <- raster::as.data.frame(st, na.rm=TRUE)
+cor(df)
+pairs(df)
 ```
 
