--- a/reports/wildlings-NiN.Rmd
+++ b/reports/wildlings-NiN.Rmd
@@ -170,9 +170,6 @@ for (j in species) { # j <- species[1]
       is.na(seeds.WALD) ~ NA_real_,
       TRUE ~ seeds.ExP
     )) 
-    grd <- grd %>% 
-      mutate(seeds.ExP = seeds.ExP/sum(seeds.ExP, na.rm = TRUE), 
-             seeds.WALD = seeds.WALD/sum(seeds.WALD, na.rm = TRUE))
 
     if (file.exists(here("data","qc",j,i,"dtm1","data","dtm1.tif"))) {
       dtm <- raster::raster(here("data","qc",j,i,"dtm1","data","dtm1.tif")) %>% 
@@ -220,9 +217,9 @@ for (i in names(percell.agg)) {
 }
 ```
 
-```{r locality climate}
+```{r locality covariates}
 localities <- read_csv(here("data", "localities.csv")) %>% 
-  select(locality, species, utm33.easting, utm33.northing) %>% 
+  select(locality, species, age.at.registration, utm33.easting, utm33.northing) %>% 
   st_as_sf(coords=c("utm33.easting", "utm33.northing")) %>% 
   st_set_crs(25833) %>% 
   as("Spatial")
@@ -230,7 +227,7 @@ chelsa <- raster::stack(here("data","raw","CHELSA","CHELSA_bio_1.tif"),
                         here("data","raw","CHELSA","CHELSA_bio_19.tif"))
 jointable <- raster::extract(chelsa, localities, sp = TRUE) %>% 
   st_as_sf() %>% st_set_geometry(NULL) %>% as_tibble() %>% 
-  rename(bio01 = CHELSA_bio_1, bio19 = CHELSA_bio_19)
+  rename(age = age.at.registration, bio01 = CHELSA_bio_1, bio19 = CHELSA_bio_19)
 anyNA(jointable)
 ```
 
