--- a/reports/wildlings-NiN.Rmd
+++ b/reports/wildlings-NiN.Rmd
@@ -25,7 +25,7 @@ for (i in ninfiles) {
 }
 ```
 
-```{r grouping of types}
+```{r unique types, eval=FALSE}
 ninfiles <- list.files(here("data","qc"), pattern = "nin.shp", recursive = TRUE)
 codes <- map(ninfiles, ~ st_read(here("data","qc",.), quiet = TRUE) %>% 
                pull(code) %>% 
@@ -36,7 +36,9 @@ map(codes, ~ any(is.na(.))) %>%
 codes <- flatten_chr(codes) %>% 
   unique()
 codes[order(substring(codes, 1, 1), as.numeric(substring(codes, 2)))]
+```
 
+```{r grouping of types}
 grouping <- tribble(
   ~code, ~group, ~vegheight,
   "T1", "T1", 0,
